<?xml version="1.0" encoding="utf-8"?>
<!-- Sign In Content -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:clipChildren="false"
    android:clipToPadding="false"

    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_margin"
    android:paddingEnd="@dimen/activity_margin"

    android:paddingStart="@dimen/activity_margin"
    android:paddingTop="30dp">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="8dp"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge" />

    <ScrollView
        android:id="@+id/login_form"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:clipChildren="false"
        android:clipToPadding="false">

        <LinearLayout
            android:id="@+id/email_login_form"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/hint_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:layout_marginTop="@dimen/activity_margin"
                android:clipChildren="false"
                android:clipToPadding="false">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5" />

                <!-- Login Button -->
                <Button
                    android:id="@+id/sign_in_button"
                    style="@style/Widget.AppCompat.Button.Colored"

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center"

                    android:text="@string/action_sign_in"
                    android:textStyle="bold" />

                <!-- OR TextView -->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.5"

                    android:gravity="center_vertical|center|center_horizontal"

                    android:text="@string/message_or"
                    android:theme="@style/NormalText" />

                <!-- Google Sign-in Button -->
                <com.google.android.gms.common.SignInButton
                    android:id="@+id/google_sign_in_button"

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"

                    android:layout_weight="5" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            </LinearLayout>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/facebook_sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>

